# insights-db-api

./: .pre-commit-config.yaml  Dockerfile  README.md  init_db.py  pyproject.toml  start.sh
.github/workflows/: build-test.yml  push-docker.yml
api/: app.py  constants.py
api/sql/: schema.sql
tests/: conftest.py  constants.py  test_app.py
