[tool.poetry]
name = "insights-db-api"
version = "0.1.0"
description = "Used api to connect to a database in order to in ingest Pages, Videos, Video Insights"
authors = ["Cedric Soares <cedricsoares@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
