[tool.poetry]
name = "insights-db-api"
version = "0.1.0"
description = "Used api to connect to a database in order to in ingest Pages, Videos, Video Insights"
authors = ["Cedric Soares <cedricsoares@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
