[tool.poetry]
name = "insights-db-api"
version = "0.1.0"
description = "Used api to connect to a database in order to in ingest Pages, Videos, Video Insights"
authors = ["Cedric Soares <cedricsoares@me.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
flask-openapi3 = "^3.1.2"
sqlfluff = "^3.0.7"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.sqlfluff.core]
dialect = "sqlite"
